Unit testing of sqlline and related scripts
Ensures that sqlline uses client options, drill-embedded the server
options.